pierre/css/bezierjs-10-bspline.css
/* ... */
input.dimmed, label.dimmed{
    opacity: 0.5;
}

.jw_ui_controller::after {
    content: "•";
    display: inline-block;
    position: relative;
    top: 7px;
    margin: 0px 6px 0 10px;
    transition: all 400ms;
    font-size: 32px;
    line-height: 0;
    opacity: 0;
    transition: 400ms;
    }
  
    .shape-is-showing::after {
      opacity: 1;
    }  

.hide {
    transition: opacity 200ms, display 200ms;
    display: none;
    opacity: 0;
    z-index: -6;
    }

#phone_modal {
    display: none;
    position: absolute;
    top: 0;
    width: 100%;
    height: 100%;
    z-index: -6;
    background-color: #000000c0;
    align-items: center;
    }

    @media screen and (max-width: 1023px) {
        #phone_modal {
            display: flex;
            z-index: 6;
        }
    }

#phone_modal > div {
margin: 0 auto;
width: 70%;
text-align: center;
}

#phone_modal h3 {
font-size: 2rem;
font-weight: 400;
line-height: 2.6rem;
}

#phone_modal button {
font-size: 1.5rem;
}

/* THIS TARGETS MY LAPTOP 1700 works */
@media screen and (max-device-width: 1700px){

    .sidenav {
        padding-top: 17px;
    }
    
    label {
        padding: 0.3rem 0.3rem 0.3rem 0;
    }
    
    .controls_flex label {
        margin-top: 3px;
    }
    
    .controls_flex_in_col {
        display: flex;
        justify-content: flex-end;
        margin-bottom: 3px;
    }

    
    .adjust_rule {
        margin: 0 auto 10px;
    }
    
    .readout {
        display: inline-block;
        min-width: 57px;
        text-align: center;
        font-size: 1.3rem;
        font-weight: normal;
        padding: 0;
        margin: 5px 11px 0px 27px;
    }
    
    /* Position and style the close button (top right corner) in Chrome & Safari */
    /* media query code came from */
    /* https://www.ryadel.com/en/css3-media-query-target-only-ie-ie6-ie11-firefox-chrome-safari-edge/ */
    @media screen and (-webkit-min-device-pixel-ratio:0) { 
        .sidenav .closebtn {
            position: absolute;
            top: 0px;
            left: 17px;
            font-size: 36px;
            padding: 1px 8px;
        }
    }
    /* Position and style the close button (top right corner) in Firefox */
    /* media query code came from */
    /* https://www.ryadel.com/en/css3-media-query-target-only-ie-ie6-ie11-firefox-chrome-safari-edge/ */
    @-moz-document url-prefix() {
        .sidenav .closebtn {
            position: absolute;
            top: 0px;
            left: 17px;
            font-size: 36px;
            padding: 9px 8px;
        } 
    }


    
}


/*
@media screen and (max-width: 400px){
    #menuicon {
        display: inherit;
    }
    
    .sidenav {
        margin-left: -540px;
    }
    
    button, label, input {
        padding: 4px;
    }

    button {
        margin-top: 0;
    }

    input,select {
        padding-left: 8px;
        min-width: 32%;
        max-width: 32%;
    }
    
    input[type='checkbox'],input[type='radio']{
        opacity: 1;
        min-width: 0;
        margin-left: 19%;
    }

    
    .instructions {
      margin-top: 4px;
    }

    #redoBtn,#saveBtn {
        margin-left: 16px;
    }

    .controls {
        margin-top: 15px;
        margin-bottom: 6px;
    }

    .instructions_container {
        max-width: 300px;
        margin-top: 20px;
    }
    
    .hide_on_mobile {
        display: none;
    }
    
}
*/

/* ----------- Non-Retina Screens ----------- */
@media screen 
  and (min-device-width: 1200px) 
  and (max-device-width: 1600px) 
  and (-webkit-min-device-pixel-ratio: 1) { 
      body {
          color: red !important;
      }
}

/* ----------- Retina Screens ----------- */
@media screen 
  and (min-device-width: 1200px) 
  and (max-device-width: 1600px) 
  and (-webkit-min-device-pixel-ratio: 2)
  and (min-resolution: 192dpi) {
      body {
          color: red !important;
      }
}

